# Review-Gate

./: .gitignore  AGENTS.md  ENHANCEMENT_PLAN.md  GEMINI.md  INSTALLATION.md  LICENSE  ReviewGateV2.mdc  SMOKE_TEST.md  VSCODE_INTEGRATION.md  install.sh  mcp.json  pyproject.toml  readme.md  requirements.txt  requirements_simple.txt  review_gate_v3_mcp.py  uninstall.sh
.github/workflows/: ci.yml
V3/: .vscodeignore  CHANGELOG.md  README.md  package.json  review-gate-v3-0.0.1.vsix  tsconfig.json
V3/src/: extension.ts  types.ts
V3/src/config/: extensionConfig.ts
V3/src/services/: AudioService.ts  BaseService.ts  FileService.ts  LoggingService.ts  MCPService.ts  ReviewGateService.ts  ServiceManager.md  ServiceManager.ts  ServiceManagerExample.ts  WebviewService.ts
cursor-extension/: .prettierignore  .vscodeignore  esbuild.js  eslint.config.mjs  package.json  review-gate-v2-3.0.0.vsix  review-gate-v3-3.0.0.vsix  review-gate-v3-3.1.0.vsix  review-gate-v3-3.2.0.vsix  tsconfig.json
cursor-extension/scripts/: cleanDist.cjs  packageVsix.cjs
cursor-extension/src/: audio.js  extension.js  ipc.js  ipcFiles.js  logger.js  state.js  utils.js  webview.js
cursor-extension/tests/: ipc.test.cjs  ipcFiles.test.cjs  webview.test.cjs
legacy/: review_gate_v2_mcp.py
review_gate_mcp/: __init__.py  config.py  database.py  install_utils.py  ipc.py  main.py  prompts.py  resources.py  server.py  speech.py  utils.py
scripts/: install.bat  install.ps1  install.sh  uninstall.bat  uninstall.ps1  uninstall.sh
tests/: test_database.py  test_install_utils.py  test_ipc.py  test_speech.py
