[build-system]
requires      = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "review-gate-mcp"
version = "3.0.0"
description = "Advanced MCP Server with Cursor Integration"
authors = [{ name = "Lakshman Turlapati", email = "your.email@example.com" }]
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.27.0",
    "typing-extensions>=4.15.0",
    "Pillow>=12.2.0",
]

[project.optional-dependencies]
speech = ["faster-whisper>=1.2.1"]
[project.scripts]
review-gate-mcp = "review_gate_mcp.main:cli"

[tool.setuptools.packages.find]
where   = ["."]
include = ["review_gate_mcp*"]
